# kafka_im_digitalen_spiel

./: README.md  index.html  kafka_themes.json  main.py  pyproject.toml  supertable.csv
Analyzer/: README.md  main.py  pyproject.toml
Scraper/: README.md  __init__.py  io_util.py  main.py  scrape_by_filter.py
analyse_approaches/: __init__.py  embedding_evalutation.py  keyword_evaluation.py  scoring.py  utils.py
analyse_approches/: generative_evaluation.py  main.py
korpus/: __init__.py  games.json  kafka_keywords.json  kafka_literature.json  tags.py
output/: supertable.csv
output/top10/phase1/: top10_Autobiographisch.csv  top10_Figuren.csv  top10_Phase1_Total.csv  top10_Werke.csv
output/top10/phase2/: top10_Phase2_Total.csv  top10_absurd.csv  top10_displaced.csv  top10_isolated.csv  top10_kafkaesque.csv  top10_surreal.csv
results/: generative_debug_responses.csv  supertable.csv
results/top10/combined_baseline/: top10_baseline_combined.csv
results/top10/embedding_evaluation/: top10_embedding_evaluation_Embedding_Total.csv  top10_embedding_evaluation_absurd.csv  top10_embedding_evaluation_alienated.csv  top10_embedding_evaluation_bureaucratic.csv  top10_embedding_evaluation_civil service.csv  top10_embedding_evaluation_displaced.csv  top10_embedding_evaluation_isolated.csv  top10_embedding_evaluation_kafkaesque.csv  (+1 more)
scraper/: progress.json  scrape_by_tags.py
top10/phase1/: top10_Autobiographisch.csv  top10_Figuren.csv  top10_Phase1_Total.csv  top10_Werke.csv
top10/phase2/: top10_alienated.csv  top10_bureaucratic.csv  top10_civil service.csv
(+24 files in other folders)
