[project]
name = "kafka_im_digitalen_spiel"
version = "0.1.0"
description = "Scraper for game descriptions and achievements. Contains methods 
for evaluation of this game data in similarity to Franz Kafka. Part of my assignment 
for the seminar Kafka im digitalen Spiel."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
